--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,18 @@
-extends layout
+doctype html
+html(lang='en')
+	head
+		meta(charset="utf-8")
+		title Untitled
+		link(rel="stylesheet", type="text/css", href="/css/main.css")
 
-block content
-	h1 Hello Boulder!
+	body
+		block content
+		#body
+			#footer
+				| d3.layout.tree
+				.hint click to do stuff
+
+	script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js")
+	script(src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js")
+	script(type="text/javascript", src="js/vendor/d3.layout.js")
+	script(type="text/javascript", src="js/main.js")
