added error testing on client and simple error message if url is not input or incorrect

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,6 +11,7 @@ html(lang='en')
 		form(id="main-form", method="", action="")
 			input(type="text", name="input", id="input-url",placeholder="Repo URL")
 			input(type="submit", placeholder="Display Repo File Tree")
+		#error-container
 		#d3-container
 			
 
