--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,5 @@
 body {
-  /*background: url(texture-noise.png);*/
-  overflow: hidden;
+  /*overflow: hidden;*/
   margin: 0;
   font-size: 14px;
   font-family: "Helvetica Neue", Helvetica;
@@ -104,4 +103,11 @@ path.link {
   fill: none;
   stroke: #ccc;
   stroke-width: 1.5px;
+}
+
+/* Andrew's styles */
+#error-container {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
