--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-size: 14px;
   font-family: "Helvetica Neue", Helvetica, arial, freesans, clean, sans-serif !important;
+  margin-top: 150px;
 }
 
 #chart, #header, #footer {
@@ -123,33 +124,51 @@ input {
 }
 
 .form-submit {
-  background-color: #dddddd;
+  background-color: #ff9933;
   width: 100px;
   border-radius: 4px;
   margin: 1rem;
   border: 1px solid #ccc;
-  /*background-color: red;*/
+}
+.form-submit:hover {
+  background-color: #ffcc99;
 }
 
 .main-header {
   display: inline-block;
   padding-right: 2rem;
   font-size: 40px;
+  margin-top: 10px;
+}
+
+#colorful-header {
+  margin: 0;
+  width: 100%;
+  height: 3px;
+  padding: 3px 0 0 0;
+  position: fixed;
+  top: 0;
+  background: url("/github-colors.png") repeat-x;
 }
 
 .main-content {
   text-align: center;
-}
-
-.form-submit:hover {
-  background-color: #C6C6C6;
+  height: 120px;
+  background-color: #e6e6e6;
+  position: fixed;
+  /*clientside request, so it looks into the public folder by the static server*/
+  border-bottom: url("/github-colors.png") repeat-x;
+  width: 100%;
+  top: 3px;
+  border-bottom: 1px solid black;
 }
 
 .repo-input {
-  width: 70%;
+  width: 60%;
   text-align: center;
   border-radius: 4px;
   border: 1px solid #ccc;
+  margin-top: 1rem;
 }
 
 #main-form {
@@ -165,15 +184,6 @@ input {
 .fa:hover {
   color: #4183c4;
   cursor: pointer;
-}
-
-#colorful-header {
-  margin: 0;
-  width: 100%;
-  height: 3px;
-  padding: 3px 0 0 0;
-  /*clientside request, so it looks into the public folder by the static server*/
-  background: url("/github-colors.png") repeat-x;
 }
 
 .git-style-link {
