centered graph regardless of repo size

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -179,8 +179,9 @@ input {
 
 #error-container {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 130px;
+  display: inline-block;
+  text-align: center;
 }
 
 .fa:hover {
@@ -201,25 +202,31 @@ input {
   text-align: center;
 }
 
+.example-link {
+  padding-bottom: 1rem;
+}
+
 .modal-header,
 .main-modal-header {
-  text-align: center;
+  text-align: left;
+  padding-left: 1rem;
   margin-top: 10px;
+  padding-bottom: 10px;
   border-bottom: 1px solid #e5e5e5;
+}
+
+.modal-header-ul {
+  border-bottom: 0;
+  padding-left: 1rem;
 }
 
 #d3-container {
   position: relative;
+  display: block;
 }
 
-svg {
-  position: absolute;
+#d3-container > svg {
   margin: 0 auto;
   display: block;
   width: 100%;
-}
-
-#d3-container,
-svg {
-  padding-left: 100px !important;
 }
