--- a/views/index.jade
+++ b/views/index.jade
@@ -31,7 +31,8 @@ html(lang='en')
 							a.git-style-link(href="https://github.com/explore", target="_blank") awesome repository
 						li Paste the link and submit!
 					h2.modal-header Still not following?
-					ul Ok! Just click one of these links to see a graph of that repository!
+					h4.modal-header-ul Ok! Just click one of these links!
+					ul.example-links 
 						li 
 							a.example-repo-link.git-style-link(href="https://github.com/jquery/jquery") jQuery
 						li
