small layout changes, also removed error message

--- a/views/index.jade
+++ b/views/index.jade
@@ -45,14 +45,14 @@ html(lang='en')
 
 
 
-		i.fa.fa-folder
-		i.fa.fa-folder-o
-		i.fa.fa-folder-open
-		i.fa.fa-folder-open-o
-		i.fa.fa-file-code-o
-		i.fa.fa-file
-		i.fa.fa-file-o
-		i.fa.fa-file-text
+		//- i.fa.fa-folder
+		//- i.fa.fa-folder-o
+		//- i.fa.fa-folder-open
+		//- i.fa.fa-folder-open-o
+		//- i.fa.fa-file-code-o
+		//- i.fa.fa-file
+		//- i.fa.fa-file-o
+		//- i.fa.fa-file-text
 
 		#error-container
 		#d3-container
