--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
 	head
 		meta(charset="utf-8")
-		title Untitled
+		title Graph That Repo!
 		link(rel="stylesheet", type="text/css", href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css")
 		link(href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css", rel="stylesheet")
 		link(rel="stylesheet", type="text/css", href="/css/main.css")
